# botello

./: README.md
botello_ws/src/botello_aruco/: CMakeLists.txt  package.xml
botello_ws/src/botello_aruco/config/: botello_aruco.yaml
botello_ws/src/botello_aruco/include/: botello_aruco_node.hpp
botello_ws/src/botello_aruco/launch/: botello_aruco.launch
botello_ws/src/botello_aruco/src/: botello_aruco_node.cpp
botello_ws/src/botello_aruco_gridboard/: CMakeLists.txt  README.md  package.xml
botello_ws/src/botello_aruco_gridboard/calibration/: 960x720.yaml
botello_ws/src/botello_aruco_gridboard/config/: board0.yaml  board00.yaml  board10.yaml  board20.yaml  board30.yaml  board40.yaml  botello_aruco_gridboard.yaml
botello_ws/src/botello_aruco_gridboard/include/: botello_aruco_gridboard_node.hpp
botello_ws/src/botello_aruco_gridboard/launch/: botello_aruco_gridboard.launch
botello_ws/src/botello_aruco_gridboard/scripts/: combine_aruco_gridboard_yamls.py  create_aruco_gridboard_images_and_yamls.py
botello_ws/src/botello_aruco_gridboard/src/: botello_aruco_gridboard_node.cpp
botello_ws/src/botello_driver/: CMakeLists.txt  package.xml
botello_ws/src/botello_driver/launch/: tello_driver.launch
botello_ws/src/botello_gallery_slam/: CMakeLists.txt  package.xml
botello_ws/src/botello_gallery_slam/config/: botello_gallery_slam.yaml
botello_ws/src/botello_gallery_slam/include/: botello_gallery_slam_node.hpp  types.hpp
botello_ws/src/botello_gallery_slam/launch/: botello_gallery_slam.launch
botello_ws/src/botello_gallery_slam/src/: botello_gallery_slam_node.cpp
botello_ws/src/botello_localization/: CMakeLists.txt  package.xml
botello_ws/src/botello_localization/config/: botello_localization.yaml
botello_ws/src/botello_localization/include/: botello_localization_node.hpp
botello_ws/src/botello_localization/launch/: botello_localization.launch
botello_ws/src/botello_localization/src/: botello_localization_node.cpp
botello_ws/src/botello_maps/: CMakeLists.txt  package.xml
botello_ws/src/botello_maps/config/: aruco_boards.yaml  botello_layout.yaml
botello_ws/src/botello_movement/: CMakeLists.txt  package.xml
botello_ws/src/botello_movement/config/: botello_movement.yaml
botello_ws/src/botello_movement/include/: botello_movement_node.hpp
botello_ws/src/botello_movement/launch/: botello_movement.launch
botello_ws/src/botello_movement/src/: botello_movement_node.cpp
botello_ws/src/botello_navigation/: CMakeLists.txt  package.xml
botello_ws/src/botello_navigation/config/: waypoints.yaml
botello_ws/src/botello_navigation/include/: botello_navigation_node.hpp
botello_ws/src/botello_twist_keyboard/: CMakeLists.txt  README.md  package.xml  teleop_twist_keyboard.py
botello_ws/src/tello_driver/: .gitmodules  CHANGELOG.rst  LICENSE
botello_ws/src/tello_driver/launch/: logger.launch  (+1 more)
(+3 files in other folders)
